wip: menu box colors, details

--- a/tokens/application.json
+++ b/tokens/application.json
@@ -151,6 +151,12 @@
                 "$value": "{config.color.palette.grey.solid.9}"
               }
             },
+            "inverted": {
+              "default": {
+                "$type": "color",
+                "$value": "{config.color.palette.grey.solid.1}"
+              }
+            },
             "light": {
               "default": {
                 "$type": "color",
@@ -217,7 +223,7 @@
             "onTone": {
               "default": {
                 "$type": "color",
-                "$value": "{config.color.palette.grey.solid.1}"
+                "$value": "{config.color.palette.grey.solid.4}"
               }
             },
             "onTranslucent": {
@@ -306,7 +312,7 @@
             "solid": {
               "default": {
                 "$type": "color",
-                "$value": "{config.color.palette.grey.solid.9}"
+                "$value": "{config.color.palette.grey.solid.7}"
               },
               "hover": {
                 "$type": "color",
