wip: disabled colors

--- a/tokens/application.json
+++ b/tokens/application.json
@@ -970,7 +970,7 @@
                   "studio.tokens": {
                     "modify": {
                       "type": "lighten",
-                      "value": "0.36",
+                      "value": "0.32",
                       "space": "oklch"
                     }
                   }
@@ -985,7 +985,7 @@
                   "studio.tokens": {
                     "modify": {
                       "type": "lighten",
-                      "value": "0.24",
+                      "value": "0.32",
                       "space": "oklch"
                     }
                   }
@@ -1013,7 +1013,7 @@
                   "studio.tokens": {
                     "modify": {
                       "type": "lighten",
-                      "value": "0.24",
+                      "value": "0.32",
                       "space": "oklch"
                     }
                   }
@@ -1072,7 +1072,7 @@
                 "studio.tokens": {
                   "modify": {
                     "type": "lighten",
-                    "value": "0.24",
+                    "value": "0.32",
                     "space": "oklch"
                   }
                 }
@@ -1110,8 +1110,8 @@
               "$extensions": {
                 "studio.tokens": {
                   "modify": {
-                    "type": "lighten",
-                    "value": "0.24",
+                    "type": "darken",
+                    "value": "0.16",
                     "space": "oklch"
                   }
                 }
@@ -1123,8 +1123,8 @@
               "$extensions": {
                 "studio.tokens": {
                   "modify": {
-                    "type": "lighten",
-                    "value": "0.24",
+                    "type": "darken",
+                    "value": "0.20",
                     "space": "oklch"
                   }
                 }
@@ -1137,7 +1137,7 @@
                 "studio.tokens": {
                   "modify": {
                     "type": "lighten",
-                    "value": "0.24",
+                    "value": "0.32",
                     "space": "oklch"
                   }
                 }
