fix: simplify component gaps

--- a/tokens/application.json
+++ b/tokens/application.json
@@ -1898,6 +1898,26 @@
           "xl": {
             "$value": "0.625rem",
             "$type": "dimension"
+          },
+          "2xl": {
+            "$value": "0.75rem",
+            "$type": "dimension"
+          },
+          "3xl": {
+            "$value": "0.875rem",
+            "$type": "dimension"
+          },
+          "4xl": {
+            "$value": "1rem",
+            "$type": "dimension"
+          },
+          "5xl": {
+            "$value": "1.125rem",
+            "$type": "dimension"
+          },
+          "6xl": {
+            "$value": "1.25rem",
+            "$type": "dimension"
           }
         },
         "radius": {
