--- a/tokens/application.json
+++ b/tokens/application.json
@@ -1588,6 +1588,10 @@
           "3xl": {
             "$value": "1.1875rem",
             "$type": "fontSizes"
+          },
+          "4xl": {
+            "$value": "1.25rem",
+            "$type": "fontSizes"
           }
         }
       },
@@ -1850,6 +1854,10 @@
           "2xl": {
             "$value": "3.5rem",
             "$type": "dimension"
+          },
+          "3xl": {
+            "$value": "4rem",
+            "$type": "dimension"
           }
         },
         "padding": {
@@ -1921,6 +1929,14 @@
           }
         },
         "radius": {
+          "4xs": {
+            "$value": "0.375rem",
+            "$type": "dimension"
+          },
+          "3xs": {
+            "$value": "0.5rem",
+            "$type": "dimension"
+          },
           "2xs": {
             "$value": "0.625rem",
             "$type": "dimension"
@@ -1939,6 +1955,14 @@
           },
           "lg": {
             "$value": "1.125rem",
+            "$type": "dimension"
+          },
+          "xl": {
+            "$value": "1.25rem",
+            "$type": "dimension"
+          },
+          "2xl": {
+            "$value": "1.375rem",
             "$type": "dimension"
           }
         },
@@ -1973,7 +1997,7 @@
         "radius": {
           "sm": {
             "default": {
-              "$value": "{app.dimension.surface.radius.md.default} - 0.25rem",
+              "$value": "1.75rem",
               "$type": "dimension"
             },
             "inset": {
@@ -1983,7 +2007,7 @@
           },
           "md": {
             "default": {
-              "$value": "{app.dimension.component.radius.md} * 2",
+              "$value": "2rem",
               "$type": "dimension"
             },
             "inset": {
@@ -1993,7 +2017,7 @@
           },
           "lg": {
             "default": {
-              "$value": "{app.dimension.surface.radius.md.default} + 0.25rem",
+              "$value": "2.25rem",
               "$type": "dimension"
             },
             "inset": {
