--- a/tokens/application.json
+++ b/tokens/application.json
@@ -1823,145 +1823,245 @@
     "dimension": {
       "component": {
         "height": {
-          "3xs": {
+          "0_5": {
+            "$value": "0.125rem",
+            "$type": "dimension"
+          },
+          "1": {
+            "$value": "0.25rem",
+            "$type": "dimension"
+          },
+          "2": {
             "$value": "0.5rem",
             "$type": "dimension"
           },
-          "2xs": {
+          "3_75": {
+            "$value": "0.9375rem",
+            "$type": "dimension"
+          },
+          "4": {
             "$value": "1rem",
             "$type": "dimension"
           },
-          "xs": {
+          "4_5": {
+            "$value": "1.125rem",
+            "$type": "dimension"
+          },
+          "5": {
             "$value": "1.25rem",
             "$type": "dimension"
           },
-          "sm": {
+          "6": {
             "$value": "1.5rem",
             "$type": "dimension"
           },
-          "md": {
+          "7": {
+            "$value": "1.75rem",
+            "$type": "dimension"
+          },
+          "7_5": {
+            "$value": "1.875rem",
+            "$type": "dimension"
+          },
+          "8": {
             "$value": "2rem",
             "$type": "dimension"
           },
-          "lg": {
+          "10": {
             "$value": "2.5rem",
             "$type": "dimension"
           },
-          "xl": {
+          "12": {
             "$value": "3rem",
             "$type": "dimension"
           },
-          "2xl": {
+          "14": {
             "$value": "3.5rem",
             "$type": "dimension"
           },
-          "3xl": {
+          "16": {
             "$value": "4rem",
             "$type": "dimension"
           }
         },
         "padding": {
-          "2xs": {
+          "0_25": {
+            "$value": "0.0625rem",
+            "$type": "dimension"
+          },
+          "0_5": {
+            "$value": "0.125rem",
+            "$type": "dimension"
+          },
+          "0_75": {
+            "$value": "0.1875rem",
+            "$type": "dimension"
+          },
+          "1": {
+            "$value": "0.25rem",
+            "$type": "dimension"
+          },
+          "1_25": {
             "$value": "0.3125rem",
             "$type": "dimension"
           },
-          "xs": {
+          "1_5": {
+            "$value": "0.375rem",
+            "$type": "dimension"
+          },
+          "1_75": {
+            "$value": "0.4375rem",
+            "$type": "dimension"
+          },
+          "2": {
             "$value": "0.5rem",
             "$type": "dimension"
           },
-          "sm": {
+          "2_25": {
+            "$value": "0.5625rem",
+            "$type": "dimension"
+          },
+          "3": {
             "$value": "0.75rem",
             "$type": "dimension"
           },
-          "md": {
+          "3_5": {
+            "$value": "0.875rem",
+            "$type": "dimension"
+          },
+          "4": {
             "$value": "1rem",
             "$type": "dimension"
           },
-          "lg": {
+          "5": {
             "$value": "1.25rem",
             "$type": "dimension"
           },
-          "xl": {
+          "6": {
             "$value": "1.5rem",
             "$type": "dimension"
           }
         },
         "gap": {
-          "xs": {
+          "0_25": {
+            "$value": "0.0625rem",
+            "$type": "dimension"
+          },
+          "0_5": {
             "$value": "0.125rem",
             "$type": "dimension"
           },
-          "sm": {
+          "0_75": {
+            "$value": "0.1875rem",
+            "$type": "dimension"
+          },
+          "1": {
             "$value": "0.25rem",
             "$type": "dimension"
           },
-          "md": {
+          "1_25": {
+            "$value": "0.3125rem",
+            "$type": "dimension"
+          },
+          "1_5": {
             "$value": "0.375rem",
             "$type": "dimension"
           },
-          "lg": {
+          "2": {
             "$value": "0.5rem",
             "$type": "dimension"
           },
-          "xl": {
+          "2_5": {
             "$value": "0.625rem",
             "$type": "dimension"
           },
-          "2xl": {
+          "3": {
             "$value": "0.75rem",
             "$type": "dimension"
           },
-          "3xl": {
+          "3_5": {
             "$value": "0.875rem",
             "$type": "dimension"
           },
-          "4xl": {
+          "3_75": {
+            "$value": "0.9375rem",
+            "$type": "dimension"
+          },
+          "4": {
             "$value": "1rem",
             "$type": "dimension"
           },
-          "5xl": {
+          "4_25": {
+            "$value": "1.0625rem",
+            "$type": "dimension"
+          },
+          "4_5": {
             "$value": "1.125rem",
             "$type": "dimension"
           },
-          "6xl": {
+          "5": {
             "$value": "1.25rem",
+            "$type": "dimension"
+          },
+          "6": {
+            "$value": "6rem",
             "$type": "dimension"
           }
         },
         "radius": {
-          "4xs": {
+          "0_5": {
+            "$value": "0.125rem",
+            "$type": "dimension"
+          },
+          "1": {
+            "$value": "0.25rem",
+            "$type": "dimension"
+          },
+          "1_25": {
+            "$value": "0.3125rem",
+            "$type": "dimension"
+          },
+          "1_5": {
             "$value": "0.375rem",
             "$type": "dimension"
           },
-          "3xs": {
+          "1_75": {
+            "$value": "0.4375rem",
+            "$type": "dimension"
+          },
+          "2": {
             "$value": "0.5rem",
             "$type": "dimension"
           },
-          "2xs": {
+          "2_25": {
+            "$value": "0.5625rem",
+            "$type": "dimension"
+          },
+          "2_5": {
             "$value": "0.625rem",
             "$type": "dimension"
           },
-          "xs": {
+          "3": {
             "$value": "0.75rem",
             "$type": "dimension"
           },
-          "sm": {
+          "3_5": {
             "$value": "0.875rem",
             "$type": "dimension"
           },
-          "md": {
+          "4": {
             "$value": "1rem",
             "$type": "dimension"
           },
-          "lg": {
+          "4_5": {
             "$value": "1.125rem",
             "$type": "dimension"
           },
-          "xl": {
+          "5": {
             "$value": "1.25rem",
             "$type": "dimension"
           },
-          "2xl": {
+          "5_5": {
             "$value": "1.375rem",
             "$type": "dimension"
           }
@@ -1989,7 +2089,7 @@
         "padding": {
           "container": {
             "default": {
-              "$value": "{app.dimension.component.padding.xs}",
+              "$value": "{app.dimension.component.padding.2}",
               "$type": "dimension"
             }
           }
