--- a/tokens/application.json
+++ b/tokens/application.json
@@ -1822,69 +1822,7 @@
     },
     "dimension": {
       "component": {
-        "height": {
-          "0_5": {
-            "$value": "0.125rem",
-            "$type": "dimension"
-          },
-          "1": {
-            "$value": "0.25rem",
-            "$type": "dimension"
-          },
-          "2": {
-            "$value": "0.5rem",
-            "$type": "dimension"
-          },
-          "3_75": {
-            "$value": "0.9375rem",
-            "$type": "dimension"
-          },
-          "4": {
-            "$value": "1rem",
-            "$type": "dimension"
-          },
-          "4_5": {
-            "$value": "1.125rem",
-            "$type": "dimension"
-          },
-          "5": {
-            "$value": "1.25rem",
-            "$type": "dimension"
-          },
-          "6": {
-            "$value": "1.5rem",
-            "$type": "dimension"
-          },
-          "7": {
-            "$value": "1.75rem",
-            "$type": "dimension"
-          },
-          "7_5": {
-            "$value": "1.875rem",
-            "$type": "dimension"
-          },
-          "8": {
-            "$value": "2rem",
-            "$type": "dimension"
-          },
-          "10": {
-            "$value": "2.5rem",
-            "$type": "dimension"
-          },
-          "12": {
-            "$value": "3rem",
-            "$type": "dimension"
-          },
-          "14": {
-            "$value": "3.5rem",
-            "$type": "dimension"
-          },
-          "16": {
-            "$value": "4rem",
-            "$type": "dimension"
-          }
-        },
-        "padding": {
+        "spacing": {
           "0_25": {
             "$value": "0.0625rem",
             "$type": "dimension"
@@ -1921,56 +1859,6 @@
             "$value": "0.5625rem",
             "$type": "dimension"
           },
-          "3": {
-            "$value": "0.75rem",
-            "$type": "dimension"
-          },
-          "3_5": {
-            "$value": "0.875rem",
-            "$type": "dimension"
-          },
-          "4": {
-            "$value": "1rem",
-            "$type": "dimension"
-          },
-          "5": {
-            "$value": "1.25rem",
-            "$type": "dimension"
-          },
-          "6": {
-            "$value": "1.5rem",
-            "$type": "dimension"
-          }
-        },
-        "gap": {
-          "0_25": {
-            "$value": "0.0625rem",
-            "$type": "dimension"
-          },
-          "0_5": {
-            "$value": "0.125rem",
-            "$type": "dimension"
-          },
-          "0_75": {
-            "$value": "0.1875rem",
-            "$type": "dimension"
-          },
-          "1": {
-            "$value": "0.25rem",
-            "$type": "dimension"
-          },
-          "1_25": {
-            "$value": "0.3125rem",
-            "$type": "dimension"
-          },
-          "1_5": {
-            "$value": "0.375rem",
-            "$type": "dimension"
-          },
-          "2": {
-            "$value": "0.5rem",
-            "$type": "dimension"
-          },
           "2_5": {
             "$value": "0.625rem",
             "$type": "dimension"
@@ -2003,8 +1891,40 @@
             "$value": "1.25rem",
             "$type": "dimension"
           },
+          "5_5": {
+            "$value": "1.375rem",
+            "$type": "dimension"
+          },
           "6": {
-            "$value": "6rem",
+            "$value": "1.5rem",
+            "$type": "dimension"
+          },
+          "7": {
+            "$value": "1.75rem",
+            "$type": "dimension"
+          },
+          "7_5": {
+            "$value": "1.875rem",
+            "$type": "dimension"
+          },
+          "8": {
+            "$value": "2rem",
+            "$type": "dimension"
+          },
+          "10": {
+            "$value": "2.5rem",
+            "$type": "dimension"
+          },
+          "12": {
+            "$value": "3rem",
+            "$type": "dimension"
+          },
+          "14": {
+            "$value": "3.5rem",
+            "$type": "dimension"
+          },
+          "16": {
+            "$value": "4rem",
             "$type": "dimension"
           }
         },
