fix: height, gap, padding > surface

--- a/tokens/application.json
+++ b/tokens/application.json
@@ -2009,7 +2009,7 @@
         "padding": {
           "container": {
             "default": {
-              "$value": "{app.dimension.component.padding.2}",
+              "$value": "{app.dimension.component.spacing.2}",
               "$type": "dimension"
             }
           }
