--- a/tokens/config.json
+++ b/tokens/config.json
@@ -657,6 +657,20 @@
         "$value": "Black",
         "$type": "other"
       }
+    },
+    "dimension": {
+      "spacing": {
+        "base": {
+          "$value": "0.3rem",
+          "$type": "dimension"
+        }
+      },
+      "radius": {
+        "base": {
+          "$value": "0.25rem",
+          "$type": "dimension"
+        }
+      }
     }
   }
 }
