--- a/tokens/application.json
+++ b/tokens/application.json
@@ -1824,165 +1824,193 @@
       "component": {
         "spacing": {
           "0_25": {
-            "$value": "0.0625rem",
+            "$value": "{config.dimension.spacing.base} * 0.25",
             "$type": "dimension"
           },
           "0_5": {
-            "$value": "0.125rem",
+            "$value": "{config.dimension.spacing.base} * 0.5",
             "$type": "dimension"
           },
           "0_75": {
-            "$value": "0.1875rem",
+            "$value": "{config.dimension.spacing.base} * 0.75",
             "$type": "dimension"
           },
           "1": {
-            "$value": "0.25rem",
+            "$value": "{config.dimension.spacing.base}",
             "$type": "dimension"
           },
           "1_25": {
-            "$value": "0.3125rem",
+            "$value": "{config.dimension.spacing.base} * 1.25",
             "$type": "dimension"
           },
           "1_5": {
-            "$value": "0.375rem",
+            "$value": "{config.dimension.spacing.base} * 1.5",
             "$type": "dimension"
           },
           "1_75": {
-            "$value": "0.4375rem",
+            "$value": "{config.dimension.spacing.base} * 1.75",
             "$type": "dimension"
           },
           "2": {
-            "$value": "0.5rem",
+            "$value": "{config.dimension.spacing.base} * 2",
             "$type": "dimension"
           },
           "2_25": {
-            "$value": "0.5625rem",
+            "$value": "{config.dimension.spacing.base} * 2.25",
             "$type": "dimension"
           },
           "2_5": {
-            "$value": "0.625rem",
+            "$value": "{config.dimension.spacing.base} * 2.5",
             "$type": "dimension"
           },
           "3": {
-            "$value": "0.75rem",
+            "$value": "{config.dimension.spacing.base} * 3",
             "$type": "dimension"
           },
           "3_5": {
-            "$value": "0.875rem",
+            "$value": "{config.dimension.spacing.base} * 3.5",
             "$type": "dimension"
           },
           "3_75": {
-            "$value": "0.9375rem",
+            "$value": "{config.dimension.spacing.base} * 3.75",
             "$type": "dimension"
           },
           "4": {
-            "$value": "1rem",
+            "$value": "{config.dimension.spacing.base} * 4",
             "$type": "dimension"
           },
           "4_25": {
-            "$value": "1.0625rem",
+            "$value": "{config.dimension.spacing.base} * 4.25",
             "$type": "dimension"
           },
           "4_5": {
-            "$value": "1.125rem",
+            "$value": "{config.dimension.spacing.base} * 4.5",
             "$type": "dimension"
           },
           "5": {
-            "$value": "1.25rem",
+            "$value": "{config.dimension.spacing.base} * 5",
             "$type": "dimension"
           },
           "5_5": {
-            "$value": "1.375rem",
+            "$value": "{config.dimension.spacing.base} * 5.5",
             "$type": "dimension"
           },
           "6": {
-            "$value": "1.5rem",
+            "$value": "{config.dimension.spacing.base} * 6",
             "$type": "dimension"
           },
           "7": {
-            "$value": "1.75rem",
+            "$value": "{config.dimension.spacing.base} * 7",
             "$type": "dimension"
           },
           "7_5": {
-            "$value": "1.875rem",
+            "$value": "{config.dimension.spacing.base} * 7.5",
             "$type": "dimension"
           },
           "8": {
-            "$value": "2rem",
+            "$value": "{config.dimension.spacing.base} * 8",
             "$type": "dimension"
           },
           "10": {
-            "$value": "2.5rem",
+            "$value": "{config.dimension.spacing.base} * 10",
             "$type": "dimension"
           },
           "12": {
-            "$value": "3rem",
+            "$value": "{config.dimension.spacing.base} * 12",
             "$type": "dimension"
           },
           "14": {
-            "$value": "3.5rem",
+            "$value": "{config.dimension.spacing.base} * 14",
             "$type": "dimension"
           },
           "16": {
-            "$value": "4rem",
+            "$value": "{config.dimension.spacing.base} * 16",
+            "$type": "dimension"
+          },
+          "20": {
+            "$value": "{config.dimension.spacing.base} * 20",
+            "$type": "dimension"
+          },
+          "24": {
+            "$value": "{config.dimension.spacing.base} * 24",
+            "$type": "dimension"
+          },
+          "28": {
+            "$value": "{config.dimension.spacing.base} * 28",
+            "$type": "dimension"
+          },
+          "30": {
+            "$value": "{config.dimension.spacing.base} * 30",
+            "$type": "dimension"
+          },
+          "36": {
+            "$value": "{config.dimension.spacing.base} * 36",
+            "$type": "dimension"
+          },
+          "48": {
+            "$value": "{config.dimension.spacing.base} * 48",
+            "$type": "dimension"
+          },
+          "60": {
+            "$value": "{config.dimension.spacing.base} * 60",
             "$type": "dimension"
           }
         },
         "radius": {
           "0_5": {
-            "$value": "0.125rem",
+            "$value": "{config.dimension.radius.base} * 0.5",
             "$type": "dimension"
           },
           "1": {
-            "$value": "0.25rem",
+            "$value": "{config.dimension.radius.base}",
             "$type": "dimension"
           },
           "1_25": {
-            "$value": "0.3125rem",
+            "$value": "{config.dimension.radius.base} * 1.25",
             "$type": "dimension"
           },
           "1_5": {
-            "$value": "0.375rem",
+            "$value": "{config.dimension.radius.base} * 1.5",
             "$type": "dimension"
           },
           "1_75": {
-            "$value": "0.4375rem",
+            "$value": "{config.dimension.radius.base} * 1.75",
             "$type": "dimension"
           },
           "2": {
-            "$value": "0.5rem",
+            "$value": "{config.dimension.radius.base} * 2",
             "$type": "dimension"
           },
           "2_25": {
-            "$value": "0.5625rem",
+            "$value": "{config.dimension.radius.base} * 2.25",
             "$type": "dimension"
           },
           "2_5": {
-            "$value": "0.625rem",
+            "$value": "{config.dimension.radius.base} * 2.5",
             "$type": "dimension"
           },
           "3": {
-            "$value": "0.75rem",
+            "$value": "{config.dimension.radius.base} * 3",
             "$type": "dimension"
           },
           "3_5": {
-            "$value": "0.875rem",
+            "$value": "{config.dimension.radius.base} * 3.5",
             "$type": "dimension"
           },
           "4": {
-            "$value": "1rem",
+            "$value": "{config.dimension.radius.base} * 4",
             "$type": "dimension"
           },
           "4_5": {
-            "$value": "1.125rem",
+            "$value": "{config.dimension.radius.base} * 4.5",
             "$type": "dimension"
           },
           "5": {
-            "$value": "1.25rem",
+            "$value": "{config.dimension.radius.base} * 5",
             "$type": "dimension"
           },
           "5_5": {
-            "$value": "1.375rem",
+            "$value": "{config.dimension.radius.base} * 5.5",
             "$type": "dimension"
           }
         },
